tester_ft/log/compile_error_vec_6.txt
-VECTOR RESERVE TEST-

./tmp/outfile_vec_6.cpp:41:42: error: no member named 'begin' in 'ft::vector<int>'
                if (!std::equal(v1.begin(),v1.end(),v2.begin()))
                                                    ~~ ^
1 error generated.
